--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "homepage": "https://github.com/kratos666/workhome22#readme",
   "dependencies": {
+    "firebase": "^3.3.2",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-mixin": "^2.0.2",
+    "reactfire": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
